--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
 	padding: 0;
 	font-size: small;
 }
+
+.googleLogo {
+	display: block;
+	margin: 0 auto;
+	padding-bottom: 1.5em;
+}
+
 /*navigation styles*/
 nav {
 	/*border: 1px solid black;*/
@@ -26,11 +33,12 @@ nav a:hover {
 
 nav ul {
 	list-style-type: none;
+	margin-right: 10px;
 }
 
 nav ul li {
 	display: inline-block;
-	padding: 10px 10px;
+	padding: 5px 5px;
 }
 
 nav.header-nav {
@@ -39,11 +47,17 @@ nav.header-nav {
 
 #signIn {
 	background-color: #4387fd;
+	border: 1px solid #4387fd;
+	border-radius: 2px;
 }
 
 #signIn a {
 	background-color: #4387fd;
 	color: #fff;
+}
+
+#signIn a:hover {
+	text-decoration: none;
 }
 
 
@@ -84,27 +98,35 @@ footer ul a {
 
 /*form styles*/
 .googleForm {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	clear: both;
 	min-width: 25%;
 	width: 40%;
 	margin: 0 auto;
 	position: absolute;
-	top: 40%;
+	top: 30%;
 	left: 30%;
 }
 #searchQuery{
-	box-shadow: 2px grey;
-	margin: 0;
+	
+
 }
 
 .searchQuery {
 	width: 100%;
 	margin-bottom: 0.5em;
-	padding: 0.6em 0;
-
+	padding: 0.6em 0 0.6em 0.6em;
+	color: #666;
+	border: 1px solid #ccc;
+	border-radius: 1px;
+	box-shadow: 2px grey;
+	margin: 0;
+	font-size: 1.1em;
 }
 
+.searchQuery:focus {
+	border-color: #a6c8ff;
+}
 .buttons {
 	width: 50%;
 	margin: 0 auto;
